# document-batcher

./: README.md  pyproject.toml
document_batcher/document/: document.py  document_batch.py  document_batch_iterator.py  document_batch_monitor.py
document_batcher/io/: input_file.py  output_file.py
